examples/negative/type_errors/L4/3_bool_len_array.ob
MODULE BoolLenArray;

TYPE MYARRAY = ARRAY FALSE OF INTEGER;

END BoolLenArray.
